# hpc-fiber-visualiser

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
data/: downsample-15-875.vtu  downsample-4-46800.vtu
src/: Archive.cpp  CGALTypedefs.h  Data.cpp  Data.h  DisjointSet.h  DisjointSetCGALExtended.h  FaceFiber.h  ReebSpace.cpp  ReebSpace.h  io.h  main.cpp
src/utility/: Geometry.cpp  Geometry.h  mc_tables.h  utility.cpp  utility.h
